# CppSOM

./: .gitignore  CMakeLists.txt  README.md  build.sh  bytecode.bc  som
antlr_grammar/: SOMLexer.g4  SOMParser.g4
core_lib/: Array.som  Block.som  Boolean.som  Double.som  False.som  Integer.som  Nil.som  String.som  True.som
examples/: Hello.som
examples/Snake/: Apple.som  Core.cpp
src/: CMakeLists.txt  SOM.cpp
src/ast/: ASTAbstractVisitor.h  ASTNodes.cpp  ASTNodes.h  CMakeLists.txt  CParseTreeConverter.cpp  CParseTreeConverter.h
src/bytecode/: BCClass.cpp  BCClass.h  Bytecode.cpp  Bytecode.h  BytecodeCompiler.cpp  BytecodeCompiler.h  BytecodeLoader.cpp  BytecodeLoader.h  CMakeLists.txt  Program.cpp  Program.h
src/interpretation/: CMakeLists.txt  ExecutionStack.cpp  ExecutionStack.h  Frame.cpp  Frame.h  GlobalContext.cpp  GlobalContext.h  Heap.cpp  Heap.h  Interpret.cpp  Interpret.h  ObjectReference.cpp  ObjectReference.h  ProgramCounter.cpp  ProgramCounter.h  ScopeStack.cpp  ScopeStack.h
src/interpretation/vm_objects/: CMakeLists.txt  VMArray.cpp  VMArray.h  VMBlock.cpp  VMBlock.h  VMClass.cpp  VMClass.h  VMDouble.h  VMInteger.cpp  VMInteger.h  VMObject.cpp  VMObject.h  VMObjectClass.h  VMString.cpp  VMString.h  VMValue.h
src/utils/: CMakeLists.txt  Config.cpp  Config.h  SourceFilesDir.cpp  SourceFilesDir.h
